{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 23,
  "lineage": "887ae828-d0b7-4529-d58b-6ec4a1c7707e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_elastic_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd4371af8e803259",
            "domain": "vpc",
            "id": "eipalloc-0fd4371af8e803259",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-235-84-209.us-west-2.compute.amazonaws.com",
            "public_ip": "44.235.84.209",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:227547434767:internet-gateway/igw-02d3659734f612cf6",
            "id": "igw-02d3659734f612cf6",
            "owner_id": "227547434767",
            "vpc_id": "vpc-038f30692e63ba26d"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd4371af8e803259",
            "association_id": "eipassoc-0bd39583a2cb0aa13",
            "connectivity_type": "public",
            "id": "nat-06c7efa7326c255ca",
            "network_interface_id": "eni-08709c5d67516c83a",
            "private_ip": "10.0.1.179",
            "public_ip": "44.235.84.209",
            "subnet_id": "subnet-0d89a8f6fd0d4eace",
            "tags": {
              "Name": "capstone-dev-vpc-038f30692e63ba26d-nat-gateway"
            },
            "tags_all": {
              "Name": "capstone-dev-vpc-038f30692e63ba26d-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_elastic_ips",
            "aws_subnet.public_subnets",
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pl_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:227547434767:route-table/rtb-0f67cb43685d20347",
            "id": "rtb-0f67cb43685d20347",
            "owner_id": "227547434767",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "capstone-dev-pl-local-route-tbl"
            },
            "tags_all": {
              "Name": "capstone-dev-pl-local-route-tbl"
            },
            "timeouts": null,
            "vpc_id": "vpc-038f30692e63ba26d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:227547434767:route-table/rtb-0f40de4d6891f46d2",
            "id": "rtb-0f40de4d6891f46d2",
            "owner_id": "227547434767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d3659734f612cf6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstone-dev-public-rt"
            },
            "tags_all": {
              "Name": "capstone-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-038f30692e63ba26d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.mainvpc",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04648535f859ead26",
            "route_table_id": "rtb-0f40de4d6891f46d2",
            "subnet_id": "subnet-0d89a8f6fd0d4eace"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:227547434767:security-group/sg-085bb86a9c8616aca",
            "description": "databricks vpc security group for capstone-dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6666
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "id": "sg-085bb86a9c8616aca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "databricks-vpc-security-group-capstone-dev",
            "name_prefix": "",
            "owner_id": "227547434767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capstone-dev-dataplane-sg"
            },
            "tags_all": {
              "Name": "capstone-dev-dataplane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-038f30692e63ba26d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:227547434767:subnet/subnet-0d89a8f6fd0d4eace",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d89a8f6fd0d4eace",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "227547434767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstone-dev-vpc-038f30692e63ba26d-public-subnet"
            },
            "tags_all": {
              "Name": "capstone-dev-vpc-038f30692e63ba26d-public-subnet"
            },
            "vpc_id": "vpc-038f30692e63ba26d"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:227547434767:vpc/vpc-038f30692e63ba26d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-0b81379b0f492d183",
            "default_route_table_id": "rtb-0ec4f1ed836189482",
            "default_security_group_id": "sg-06d3b8bbd46bf40ed",
            "dhcp_options_id": "dopt-0a6d975d41ff19cd7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038f30692e63ba26d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec4f1ed836189482",
            "owner_id": "227547434767",
            "tags": {
              "Name": "capstone-dev-vpc"
            },
            "tags_all": {
              "Name": "capstone-dev-vpc"
            }
          },
          "dependencies": [
            "random_string.naming"
          ]
        }
      ]
    }
  ]
}